...
    <string name="rename_name">Name for %1$s</string>
    <string name="rename_save">Save</string>
    <string name="favorites_soft_cap">More than %1$d Favorites. Home takes them and starts to scroll.</string>
    <string name="favorites_move_up">Move %1$s up</string>
    <string name="favorites_move_down">Move %1$s down</string>
    <string name="favorites_unpin">Unpin %1$s</string>
    <string name="setup_theme_title">Pick a look</string>
    <string name="setup_theme_explanation">Six themes, each built on a public-domain work. You can change this later in Settings.</string>
    <string name="setup_home_role_title">Make Less your launcher</string>
    <string name="setup_home_role_explanation">Less opens when you press home. Nothing else changes.</string>
    <string name="setup_home_role_request">Set Less as default</string>
    <string name="setup_home_role_held">Less is your launcher.</string>
    <string name="setup_favorites_title">Choose your Favorites</string>
    <string name="setup_favorites_explanation">These go on Home. Long-press an app in the Drawer to add more later.</string>
    <string name="setup_favorites_empty">No apps to choose from yet.</string>
    <string name="setup_continue">Continue</string>
    <string name="setup_back">Back</string>
    <string name="setup_finish">Done</string>
    <string name="drawer_home_role_prompt">Make Less your default launcher</string>
</resources>

